--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </tr>
 </table>
 
-<h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
+<h1>Welcome to My Blog!</h1>
+
 
 <script>
   // Initialization
